fixed the alignment of the icons again because I'm stupid

--- a/nicolai.ruckel.de/themes/nicolai/static/css/style.css
+++ b/nicolai.ruckel.de/themes/nicolai/static/css/style.css
@@ -166,7 +166,7 @@ nav ul li {
 .social img {
   height: 1.2em;
   width: auto;
-  vertical-align: middle;
+  vertical-align: text-bottom;
 }
 
 .recent ul {
